Update intro from second-year to third-year

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
             </div>
             <p class="mb-5">
-                I am a second-year Ph.D. student in Computer Science at UT Arlington. I currently work under the supervision of Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities. I am also currently working on a project that deals with brain imaging (fMRI) for fatigue prediction in Traumatic Brain Injury (TBI) patients. 
+                I am a third-year Ph.D. student in Computer Science at UT Arlington. I currently work under the supervision of Prof. Makedon in vision projects with machine learning that involve human activity recognition, video analysis, etc to automate systems that assess people with different cognitive abilities. I am also currently working on a project that deals with brain imaging (fMRI) for fatigue prediction in Traumatic Brain Injury (TBI) patients. 
             </p>
             <p>
                 I also get excited by the recent state-of-the-art self-supervised learning methods that are taking us to a world where data itself provides supervision.
