--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
                         <a href="/files/Full-Header Certificates/Codepath_Certificate_Fall_2021.pdf" target="_blank">
-                            <b>Certification</b> - Codepath - Advanced Software Engineering Course, Fall 2021
+                            <b>Certification</b> - Codepath: Advanced Software Engineering Course, Fall 2021
                         </a>
                     </li>
                     <li>
