Add outstading doctoral student award

--- a/index.html
+++ b/index.html
@@ -520,6 +520,10 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
+                        <b>John S. Schuchman Outstanding Doctoral Student, 2022</b> - The University of Texas at Arlington
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>
                         <b>Doctoral Consortium (DC) Winner</b> - PETRA 2021 Conference, Corfu, Greece
                     </li>
                     <li>
