--- a/index.html
+++ b/index.html
@@ -521,6 +521,10 @@
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
                         <b>John S. Schuchman Outstanding Doctoral Student, 2022</b> - The University of Texas at Arlington
+                        
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>
                         <a href="/files/Full-Header Certificates/Codepath_Certificate_Fall_2021.pdf" target="_blank">
                             <b>Certification</b> - Codepath: Advanced Software Engineering Course, Fall 2021
                         </a>
