--- a/index.html
+++ b/index.html
@@ -525,13 +525,17 @@
                     </li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
+                        <b>Doctoral Consortium (DC) Winner</b> - PETRA 2022 Conference, Corfu, Greece
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>
                         <a href="/files/Full-Header Certificates/Codepath_Certificate_Fall_2021.pdf" target="_blank">
                             <b>Certification</b> - Codepath: Advanced Software Engineering Course, Fall 2021
                         </a>
                     </li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
-                        <b>Doctoral Consortium (DC) Winner</b> - PETRA 2021 Conference, Corfu, Greece
+                        <b>Doctoral Consortium (DC) Winner</b> - PETRA 2021 Conference, Greece
                     </li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
