Add date for L3/Harris award

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                         <i class="fa-li fa fa-trophy text-warning"></i>
                         <a href="https://uta.engineering/innovationday/project.php?p=2&h=e44283fa45abdc0bc57e28b40ff3a7e9"
                             target="_blank">
-                            <b>Fellowship</b> - Graduate L3/Harris Award for Innovation from L3/Harris
+                            <b>Fellowship</b> - Graduate L3/Harris Award for Innovation from L3/Harris, 2020
                         </a>
                     </li>
                     <li>
