--- a/index.html
+++ b/index.html
@@ -209,6 +209,21 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Software Engineering Intern, Machine Learning (Ph.D.)</h3>
+                        <div class="subheading mb-3">Meta</div>
+                        <ul>
+                            <li>Audio Video Understanding</li>
+                            <!-- <li>Built a risk analysis matrix dashboard to visualize patient's health information</li> -->
+                        </ul>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">May 2022 - August 2022</span>
+                    </div>
+                </div>
+
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
                         <h3 class="mb-0">Graduate Teaching/Research Assistant</h3>
                         <div class="subheading mb-3">Computer Science & Engineering, UT Arlington</div>
                         <ul>
