--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Software Engineering Intern, Machine Learning (Ph.D.)</h3>
-                        <div class="subheading mb-3">Meta</div>
+                        <div class="subheading mb-3">Meta, Menlo Park, CA</div>
                         <ul>
                             <li>Audio Video Understanding</li>
                             <!-- <li>Built a risk analysis matrix dashboard to visualize patient's health information</li> -->
