Add information about Meta internship

--- a/index.html
+++ b/index.html
@@ -212,8 +212,11 @@
                         <h3 class="mb-0">Software Engineering Intern, Machine Learning (Ph.D.)</h3>
                         <div class="subheading mb-3">Meta, Menlo Park, CA</div>
                         <ul>
-                            <li>Audio Video Understanding</li>
-                            <!-- <li>Built a risk analysis matrix dashboard to visualize patient's health information</li> -->
+                            <li>Audio Video Understanding Team</li>
+                            <li>Built a system that visualizes the current popular trends going on in REELS videos
+                                uploaded on Facebook and Instagram</li>
+                            <li>Unsupervised Clustering Algorithm, NLP to assign topics to clusters generated, UI
+                                Dashboard, and Search Indexing API</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
@@ -535,8 +538,9 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
-                        <b>John S. Schuchman Outstanding Doctoral Student, 2022</b> - The University of Texas at Arlington
-                        
+                        <b>John S. Schuchman Outstanding Doctoral Student, 2022</b> - The University of Texas at
+                        Arlington
+
                     </li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
