Modify information to Meta experience

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                             <li>Audio Video Understanding Team</li>
                             <li>Built a system that visualizes the current popular trends going on in REELS videos
                                 uploaded on Facebook and Instagram</li>
-                            <li>Unsupervised Clustering Algorithm, NLP to assign topics to clusters generated, UI
-                                Dashboard, and Search Indexing API</li>
+                            <li>Unsupervised Clustering of videos, NLP to assign topics to clusters generated, UI
+                                Dashboard, and API for Search Indexing in Big Data</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
