--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             <li>Built a system that visualizes the current popular trends going on in REELS videos
                                 uploaded on Facebook and Instagram</li>
                             <li>Unsupervised Clustering of videos, NLP to assign topics to clusters generated, UI
-                                Dashboard, and API for Search Indexing in Big Data</li>
+                                Dashboard, and Search Indexing API for video search based on topics generated.</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
