--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <a href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-google fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
