Add more information about Meta internship experience'

--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                             <li>Audio Video Understanding Team</li>
                             <li>Built a system that visualizes the current popular trends going on in REELS videos
                                 uploaded on Facebook and Instagram</li>
+                            <li>My POC was used to pitch in services for other clients in the company by my team manager.</li>
                             <li>Unsupervised Clustering of videos, NLP to assign topics to clusters generated, UI
                                 Dashboard, and Search Indexing API for video search based on topics generated.</li>
                         </ul>
