--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
                     <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
                 </div>
                 <p class="mb-5">
-                    I am a third-year Ph.D. student in Computer Science at UT Arlington. I currently work under the
+                    I am a fourth-year Ph.D. student in Computer Science at UT Arlington. I currently work under the
                     supervision of Prof. Fillia Makedon in computer vision projects with machine learning that involve
-                    human activity recognition, video analysis, etc., to automate systems that assess people with
+                    human activity recognition, video analysis, etc. My goal is to automate systems that assess people with
                     different physical and cognitive abilities. In addition, I recently worked on a project that deals
                     with brain imaging (fMRI) to understand cognitive fatigue in people with Traumatic Brain Injury
                     (TBI). Other than that, I am currently investing my time in learning state-of-the-art
