Add new information in Introduction

--- a/index.html
+++ b/index.html
@@ -146,9 +146,19 @@
                     <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
                 </div>
                 <p class="mb-5">
+                    With over <b>four years of extensive research experience</b> in machine learning and
+                    human-computer interaction, I am confident that I can deliver valuable insights through advanced
+                    data-driven methods and data analytics. My expertise in signal processing, statistical analysis,
+                    supervised and unsupervised machine learning (ML), and deep learning (DL) algorithms has enabled me
+                    to conduct classification and regression analysis on various data modalities successfully. My
+                    research focuses on applying self-supervised learning to obtain effective representations of
+                    high-dimensional data and combining multiple data modalities for better performance, which has been
+                    demonstrated through my <b>10+ publications and 600+ citations</b>.
+
                     I am a fourth-year Ph.D. student in Computer Science at UT Arlington. I currently work under the
                     supervision of Prof. Fillia Makedon in computer vision projects with machine learning that involve
-                    human activity recognition, video analysis, etc. My goal is to automate systems that assess people with
+                    human activity recognition, video analysis, etc. My goal is to automate systems that assess people
+                    with
                     different physical and cognitive abilities. In addition, I recently worked on a project that deals
                     with brain imaging (fMRI) to understand cognitive fatigue in people with Traumatic Brain Injury
                     (TBI). Other than that, I am currently investing my time in learning state-of-the-art
@@ -217,7 +227,8 @@
                             <li>Audio Video Understanding Team</li>
                             <li>Built a system that visualizes the current popular trends going on in REELS videos
                                 uploaded on Facebook and Instagram</li>
-                            <li>My POC was used to pitch in services for other clients in the company by my team manager.</li>
+                            <li>My POC was used to pitch in services for other clients in the company by my team
+                                manager.</li>
                             <li>Unsupervised Clustering of videos, NLP to assign topics to clusters generated, UI
                                 Dashboard, and Search Indexing API for video search based on topics generated.</li>
                         </ul>
