Update intro on the webpage

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="subheading mb-5">Arlington, Tx, USA · (682) 433-6518 ·
                     <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
                 </div>
-                <p class="mb-5">
+                <!-- <p class="mb-5">
                     With over <b>four years of extensive research experience</b> in machine learning and
                     human-computer interaction, I am confident that I can deliver valuable insights through advanced
                     data-driven methods and data analytics. My expertise in signal processing, statistical analysis,
@@ -164,6 +164,24 @@
                     (TBI). Other than that, I am currently investing my time in learning state-of-the-art
                     self-supervised learning techniques and implementing them to improve the performance of my deep
                     learning models.
+                </p> -->
+
+                <p class="mb-5">
+                    I am a Ph.D. student specializing in machine learning and computer vision with a focus on enhancing
+                    human-computer interaction. I have <b>over four years of research experience</b> in this field and
+                    am adept
+                    at leveraging advanced data-driven methods and analytics to provide valuable insights.
+
+                    My expertise lies in signal processing, statistical analysis, supervised and unsupervised machine
+                    learning (ML), and deep learning (DL) algorithms. I have successfully conducted classification and
+                    regression analysis on various data modalities.
+                    <br><br>
+                    My research focuses on self-supervised learning to obtain effective representations of
+                    high-dimensional data and combining multiple data modalities to achieve superior performance. I have
+                    authored more than 10 publications and my work has been cited over 700 times.
+
+                    I am committed to applying my knowledge and experience to drive innovation and advance the field of
+                    human-computer interaction through machine learning and computer vision.
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0">
