Highlight main parts in intro

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <br><br>
                     My research focuses on self-supervised learning to obtain effective representations of
                     high-dimensional data and combining multiple data modalities to achieve superior performance. I have
-                    authored more than 10 publications and my work has been cited over 700 times.
+                    authored more than <b>10 publications</b> and my work has been <b>cited over 700 times</b>.
 
                     I am committed to applying my knowledge and experience to drive innovation and advance the field of
                     human-computer interaction through machine learning and computer vision.
