Add disseration fellowship award

--- a/index.html
+++ b/index.html
@@ -570,6 +570,11 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
+                        <b>Dissertation Fellowship Award, 2023</b> - The University of Texas at
+                        Arlington (Office of Graduate Studies)
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>
                         <b>John S. Schuchman Outstanding Doctoral Student, 2022</b> - The University of Texas at
                         Arlington
 
