--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
                     <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#papers">Publications</a>
+                    <!-- <a class="nav-link js-scroll-trigger" href="#papers">Publications</a> -->
+                    <a class="nav-link js-scroll-trigger"
+                        href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en"
+                        target="_blank">Publications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="https://jashish.com.np/blog" target="_blank">Blog</a>
