Comment out publications section

--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
         </section>
 
         <!-- Papers Section -->
-        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="papers">
+        <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="papers">
             <div class="my-auto">
                 <h2 class="mb-5">Publications</h2>
                 <ul class="fa-ul mb-0">
@@ -1124,7 +1124,7 @@
                 </ul>
 
             </div>
-        </section>
+        </section> -->
 
         <!-- Bootstrap core JavaScript -->
         <script src="vendor/jquery/jquery.min.js"></script>
