Add session chair and participation certification for HCII 2023

--- a/index.html
+++ b/index.html
@@ -573,6 +573,13 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
+                        <a href="/files/HCII2023_Participation_Certificate_3661.pdf"
+                            target="_blank">
+                        <b>HCII 2023 Session Chair and Presenter</b> - Coppenhagen, Denmark
+                        </a>
+                    </li>
+                    <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i>
                         <b>Dissertation Fellowship Award, 2023</b> - The University of Texas at
                         Arlington (Office of Graduate Studies)
                     </li>
