--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@
                     am adept
                     at leveraging advanced data-driven methods and analytics to provide valuable insights.
 
-                    My expertise lies in signal processing, statistical analysis, supervised and unsupervised machine
-                    learning (ML), and deep learning (DL) algorithms. I have successfully conducted classification and
-                    regression analysis on various data modalities.
+                    My expertise lies in statistical analysis, supervised and unsupervised machine
+                    learning (ML), deep learning (DL) algorithms, and signal processing. I have successfully conducted
+                    classification and regression analysis on various data modalities.
                     <br><br>
-                    My research focuses on self-supervised learning to obtain effective representations of
+                    My research is also focused on self-supervised learning to obtain effective representations of
                     high-dimensional data and combining multiple data modalities to achieve superior performance. I have
-                    authored more than <b>12 publications</b> and my work has been <b>cited over 850 times</b>.
+                    authored more than <b>14 publications</b> and my work has been <b>cited over 950 times</b>.
 
                     I am committed to applying my knowledge and experience to drive innovation and advance the field of
-                    human-computer interaction through machine learning and computer vision.
+                    human-computer interaction through machine learning and computer vision technologies.
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0">
@@ -573,9 +573,8 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i>
-                        <a href="/files/HCII2023_Participation_Certificate_3661.pdf"
-                            target="_blank">
-                        <b>HCII 2023 Session Chair and Presenter</b> - Coppenhagen, Denmark
+                        <a href="/files/HCII2023_Participation_Certificate_3661.pdf" target="_blank">
+                            <b>HCII 2023 Session Chair and Presenter</b> - Coppenhagen, Denmark
                         </a>
                     </li>
                     <li>
