Update citations and add link to scholar

--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
                     <br><br>
                     My research is also focused on self-supervised learning to obtain effective representations of
                     high-dimensional data and combining multiple data modalities to achieve superior performance. I have
-                    authored more than <b>14 publications</b> and my work has been <b>cited over 950 times</b>.
-
+                    authored more than <a href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en"
+                        target="_blank"><b>14 publications</b></a> and my work has been <b>cited over 1000 times</b>.
                     I am committed to applying my knowledge and experience to drive innovation and advance the field of
                     human-computer interaction through machine learning and computer vision technologies.
                 </p>
