Update UTA experience

--- a/index.html
+++ b/index.html
@@ -262,13 +262,18 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Graduate Teaching/Research Assistant</h3>
+                        <h3 class="mb-0">Graduate Research/Teaching Assistant</h3>
                         <div class="subheading mb-3">Computer Science & Engineering, UT Arlington</div>
                         <ul>
-                            <li>Teaching Assistant for programming courses in C, JAVA, and Raspberry Pi</li>
-                            <li>Research in computer vision and machine learning for improving human-computer
-                                interaction
-                                <a href="http://heracleia.uta.edu" target="_blank">(Heracleia HCC Lab)</a>
+                            <li>Built pre-processing pipelines to analyze visual data for understanding cognitive
+                                fatigue in people (images, videos, fMRI)</li>
+                            <li>Developed a multi-modal fusion algorithm to recognize Human Activities from RGB videos
+                                for cognitive analysis in children</li>
+                            <li>Assistant Lecturer for Human-Computer Interaction (Special Topics) (5369/6369) course
+                            </li>
+                            <li>Previously TA for programming and system courses: C, JAVA, Linux, Digital Circuits, and
+                                Raspberry Pi Labs</li>
+                            <a href="http://heracleia.uta.edu" target="_blank">(Heracleia HCC Lab)</a>
                             </li>
                         </ul>
                     </div>
