--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
                 </p> -->
 
                 <p class="mb-5">
-                    I am a Ph.D. student specializing in machine learning and computer vision with a focus on enhancing
-                    human-computer interaction. I have <b>over four years of research experience</b> in this field and
-                    am adept
-                    at leveraging advanced data-driven methods and analytics to provide valuable insights.
+                    I am a Ph.D. candidate (graduating Dec 2023) specializing in machine learning and computer vision
+                    with a focus on enhancing human-computer interaction. I have <b>over four years of research
+                        experience</b> in this field and am adept at leveraging advanced data-driven methods and
+                    analytics to provide valuable insights.
 
                     My expertise lies in statistical analysis, supervised and unsupervised machine
                     learning (ML), deep learning (DL) algorithms, and signal processing. I have successfully conducted
