--- a/index.html
+++ b/index.html
@@ -170,21 +170,27 @@
                 </p> -->
 
                 <p class="mb-5">
-                    I am a Ph.D. candidate (graduating Dec 2023) specializing in machine learning and computer vision
-                    with a focus on enhancing human-computer interaction. I have <b>over four years of research
-                        experience</b> in this field and am adept at leveraging advanced data-driven methods and
-                    analytics to provide valuable insights.
+                    I am currently employed as a Research Scientist at Meta, where I collaborate with the Navigation
+                    team on the Facebook app. My primary focus is enhancing users' navigation experience within the app
+                    by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging and Notification
+                    signals.
+                    <br>
+                    I earned my Ph.D. in Computer Science in 2023, specializing in machine learning and computer vision,
+                    with a specific emphasis on improving human-computer interaction. With <b>over four years of
+                        research experience</b>, I excel in applying advanced data-driven methods and analytics to
+                    derive valuable insights.
 
-                    My expertise lies in statistical analysis, supervised and unsupervised machine
-                    learning (ML), deep learning (DL) algorithms, and signal processing. I have successfully conducted
-                    classification and regression analysis on various data modalities.
+                    My expertise spans across statistical analysis, supervised and unsupervised machine learning (ML),
+                    deep learning (DL) algorithms, and signal processing. I have successfully conducted classification
+                    and regression analyses on various data modalities.
                     <br><br>
-                    My research is also focused on self-supervised learning to obtain effective representations of
-                    high-dimensional data and combining multiple data modalities to achieve superior performance. I have
-                    authored more than <a href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en"
-                        target="_blank"><b>14 publications</b></a> and my work has been <b>cited over 1000 times</b>.
-                    I am committed to applying my knowledge and experience to drive innovation and advance the field of
-                    human-computer interaction through machine learning and computer vision technologies.
+                    In addition to my primary focus, my research delves into self-supervised learning for effective
+                    representations of high-dimensional data and the integration of multiple data modalities to achieve
+                    superior performance. I have authored more than <a
+                        href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en" target="_blank"><b>14
+                            publications</b></a>, with my work being <b>cited over 1200 times</b>. I am dedicated to
+                    applying my knowledge and experience to drive innovation and advance the field of human-computer
+                    interaction through the application of machine learning and computer vision technologies.
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0">
@@ -239,6 +245,22 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
             <div class="my-auto">
                 <h2 class="mb-5">Experience</h2>
+
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Research Scientist (Generative AI)</h3>
+                        <div class="subheading mb-3">Meta, Menlo Park, CA</div>
+                        <ul>
+                            <li>Facebook Navigation ML Team</li>
+                            <li>Working on enhancing user's navigation experience within the Facebook app by providing
+                                appropriate badging and notification signals using generative AI and machine learning.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">May 2022 - August 2022</span>
+                    </div>
+                </div>
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
