Fix formatting issues

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
                 </p> -->
 
                 <p class="mb-5">
-                    I am currently employed as a Research Scientist at Meta, where I collaborate with the Navigation
-                    team on the Facebook app. My primary focus is enhancing users' navigation experience within the app
-                    by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging and Notification
-                    signals.
-                    <br>
+                    I am currently employed as a <b>Research Scientist at Meta</b>, where I collaborate with the
+                    Navigation team on the Facebook app. My primary focus is enhancing users' navigation experience
+                    within the app by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging
+                    and Notification signals.
+                    <br><br>
                     I earned my Ph.D. in Computer Science in 2023, specializing in machine learning and computer vision,
                     with a specific emphasis on improving human-computer interaction. With <b>over four years of
                         research experience</b>, I excel in applying advanced data-driven methods and analytics to
