Update experience description

--- a/index.html
+++ b/index.html
@@ -252,9 +252,10 @@
                         <div class="subheading mb-3">Meta, Menlo Park, CA</div>
                         <ul>
                             <li>Facebook Navigation ML Team</li>
-                            <li>Working on enhancing user's navigation experience within the Facebook app by providing
-                                appropriate badging and notification signals using generative AI and machine learning.
-                            </li>
+                            <li>Improving user navigation experience in the Facebook app through the implementation of
+                                relevant badging and notification signals</li>
+                            <li>Utilizing generative AI and machine learning techniques to enhance the overall
+                                navigation user experience</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
