--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <h1 class="mb-0">Ashish
                     <span class="text-primary">Jaiswal</span>
                 </h1>
-                <div class="subheading mb-5">Arlington, Tx, USA · (682) 433-6518 ·
+                <div class="subheading mb-5">Menlo Park, CA, USA · (682) 433-6518 ·
                     <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
                 </div>
                 <!-- <p class="mb-5">
