--- a/index.html
+++ b/index.html
@@ -148,49 +148,16 @@
                 <div class="subheading mb-5">Menlo Park, CA, USA · (682) 433-6518 ·
                     <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
                 </div>
-                <!-- <p class="mb-5">
-                    With over <b>four years of extensive research experience</b> in machine learning and
-                    human-computer interaction, I am confident that I can deliver valuable insights through advanced
-                    data-driven methods and data analytics. My expertise in signal processing, statistical analysis,
-                    supervised and unsupervised machine learning (ML), and deep learning (DL) algorithms has enabled me
-                    to conduct classification and regression analysis on various data modalities successfully. My
-                    research focuses on applying self-supervised learning to obtain effective representations of
-                    high-dimensional data and combining multiple data modalities for better performance, which has been
-                    demonstrated through my <b>10+ publications and 600+ citations</b>.
-                    <br><br>
-                    I am a fourth-year Ph.D. student in Computer Science at UT Arlington. I currently work under the
-                    supervision of Prof. Fillia Makedon in computer vision projects with machine learning that involve
-                    human activity recognition, video analysis, etc. My goal is to automate systems that assess people
-                    with
-                    different physical and cognitive abilities. In addition, I recently worked on a project that deals
-                    with brain imaging (fMRI) to understand cognitive fatigue in people with Traumatic Brain Injury
-                    (TBI). Other than that, I am currently investing my time in learning state-of-the-art
-                    self-supervised learning techniques and implementing them to improve the performance of my deep
-                    learning models.
-                </p> -->
-
                 <p class="mb-5">
-                    I am currently employed as a <b>Research Scientist at Meta</b>, where I collaborate with the
-                    Navigation team on the Facebook app. My primary focus is enhancing users' navigation experience
-                    within the app by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging
-                    and Notification signals.
-                    <br><br>
-                    I earned my Ph.D. in Computer Science in 2023, specializing in machine learning and computer vision,
-                    with a specific emphasis on improving human-computer interaction. With <b>over four years of
-                        research experience</b>, I excel in applying advanced data-driven methods and analytics to
-                    derive valuable insights.
+                    I am currently employed as a <b>Research Scientist at Meta</b>, where I collaborate with the Navigation team on the Facebook app. My primary focus is enhancing users' navigation experience within the app by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging and Notification signals.
 
-                    My expertise spans across statistical analysis, supervised and unsupervised machine learning (ML),
-                    deep learning (DL) algorithms, and signal processing. I have successfully conducted classification
-                    and regression analyses on various data modalities.
                     <br><br>
-                    In addition to my primary focus, my research delves into self-supervised learning for effective
-                    representations of high-dimensional data and the integration of multiple data modalities to achieve
-                    superior performance. I have authored more than <a
-                        href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en" target="_blank"><b>14
-                            publications</b></a>, with my work being <b>cited over 1200 times</b>. I am dedicated to
-                    applying my knowledge and experience to drive innovation and advance the field of human-computer
-                    interaction through the application of machine learning and computer vision technologies.
+                    I earned my Ph.D. in Computer Science in 2023, specializing in machine learning and computer vision, with a specific emphasis on improving human-computer interaction. With <b>over four years of research experience</b>, I excel in applying advanced data-driven methods and analytics to derive valuable insights. My expertise spans across statistical analysis, supervised and unsupervised machine learning (ML), deep learning (DL) algorithms, and signal processing. I have successfully conducted classification and regression analyses on various data modalities.
+                    
+                    <br><br>
+                    In addition to my primary focus, my research delves into self-supervised learning for effective representations of high-dimensional data and the integration of multiple data modalities to achieve superior performance. I have authored more than <a
+                        href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en" target="_blank"><b>15
+                            publications</b></a>, with my work being <b>cited over 1200 times</b>. I am dedicated to applying my knowledge and experience to drive innovation and advance the field of human-computer interaction through the application of machine learning and computer vision technologies.
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0">
