Update work description and format doc

--- a/index.html
+++ b/index.html
@@ -149,15 +149,27 @@
                     <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
                 </div>
                 <p class="mb-5">
-                    I am currently employed as a <b>Research Scientist at Meta</b>, where I collaborate with the Navigation team on the Facebook app. My primary focus is enhancing users' navigation experience within the app by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging and Notification signals.
+                    I am currently employed as a <b>Research Scientist at Meta</b>, where I collaborate with the
+                    Navigation team on the Facebook app. My primary focus is enhancing users' navigation experience
+                    within the app by utilizing Generative AI (GenAI) and machine learning to suggest relevant Badging
+                    and Notification signals.
 
                     <br><br>
-                    I earned my Ph.D. in Computer Science in 2023, specializing in machine learning and computer vision, with a specific emphasis on improving human-computer interaction. With <b>over four years of research experience</b>, I excel in applying advanced data-driven methods and analytics to derive valuable insights. My expertise spans across statistical analysis, supervised and unsupervised machine learning (ML), deep learning (DL) algorithms, and signal processing. I have successfully conducted classification and regression analyses on various data modalities.
-                    
+                    I earned my Ph.D. in Computer Science in 2023, specializing in machine learning and computer vision,
+                    with a specific emphasis on improving human-computer interaction. With <b>over four years of
+                        research experience</b>, I excel in applying advanced data-driven methods and analytics to
+                    derive valuable insights. My expertise spans across statistical analysis, supervised and
+                    unsupervised machine learning (ML), deep learning (DL) algorithms, and signal processing. I have
+                    successfully conducted classification and regression analyses on various data modalities.
+
                     <br><br>
-                    In addition to my primary focus, my research delves into self-supervised learning for effective representations of high-dimensional data and the integration of multiple data modalities to achieve superior performance. I have authored more than <a
+                    In addition to my primary focus, my research delves into self-supervised learning for effective
+                    representations of high-dimensional data and the integration of multiple data modalities to achieve
+                    superior performance. I have authored more than <a
                         href="https://scholar.google.com/citations?user=sCo50tYAAAAJ&hl=en" target="_blank"><b>15
-                            publications</b></a>, with my work being <b>cited over 1200 times</b>. I am dedicated to applying my knowledge and experience to drive innovation and advance the field of human-computer interaction through the application of machine learning and computer vision technologies.
+                            publications</b></a>, with my work being <b>cited over 1200 times</b>. I am dedicated to
+                    applying my knowledge and experience to drive innovation and advance the field of human-computer
+                    interaction through the application of machine learning and computer vision technologies.
                 </p>
 
                 <ul class="list-inline list-social-icons mb-0">
@@ -219,10 +231,8 @@
                         <div class="subheading mb-3">Meta, Menlo Park, CA</div>
                         <ul>
                             <li>Facebook Navigation ML Team</li>
-                            <li>Improving user navigation experience in the Facebook app through the implementation of
-                                relevant badging and notification signals</li>
-                            <li>Utilizing generative AI and machine learning techniques to enhance the overall
-                                navigation user experience</li>
+                            <li>Enhancing user navigation experience in the Facebook app by incorporating relevant
+                                badging and notification signals through machine learning and generative AI.</li>
                         </ul>
                     </div>
                     <div class="resume-date text-md-right">
